k8s/dev/traefik/traefik-ingress-controller.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2.1
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --accesslog
            - --entrypoints.web.address=:80
            - --entrypoints.web-secure.address=:443
            - --entrypoints.cc-port.address=:50053
            - --entrypoints.rd-port.address=:50052
            - --entrypoints.rt-port.address=:50051
            - --entrypoints.eth-port.address=:50054
            - --providers.kubernetescrd=true
            - --log.level=DEBUG
            - --metrics.prometheus=true
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=0mkar@protonmail.com
            - --certificatesresolvers.default.acme.storage=acme.json
            - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
            - name: web-secure
              containerPort: 443
            - name: rt-port
              containerPort: 50051
            - name: rd-port
              containerPort: 50052
            - name: cc-port
              containerPort: 50053
            - name: eth-port
              containerPort: 50054
