k8s/dev/traefik/traefik-ingressroutes-grpc.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - rt-port
    - rd-port
    - cc-port
    - eth-port
  routes:
  - match: Host(`rt.staging.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: remix-tests-api-cluster-ip-svc
      port: 50051
      scheme: h2c
  - match: Host(`rd.staging.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: remix-debug-cluster-ip-svc
      port: 50052
      scheme: h2c
  - match: Host(`cc.staging.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: client-call-cluster-ip-svc
      port: 50053
      scheme: h2c
  - match: Host(`eth.staging.ethco.de`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ethereum-grpc-api-ip-svc
      port: 50054
      scheme: h2c
