k8s/dev/traefik/traefik-ingressroutes-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls
  namespace: default
spec:
  entryPoints:
    # - web
    - web-secure

  routes:
    - match: Host(`trf.staging.ethco.de`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: basic-auth
      services:
        - name: api@internal
          kind: TraefikService
          port: 8080
    # - match: Host(`auth.staging.ethco.de`) && PathPrefix(`/`)
    #   kind: Rule
    #   services:
    #     - name: auth-api-cluster-ip-svc
    #       port: 4040
    - match: Host(`etherscanner.staging.ethco.de`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: etherscanner-backend-cluster-svc
          port: 4545
    - match: Host(`wallet.staging.ethco.de`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: wallet-backend-ip-svc
          port: 4550
    - match: Host(`dapp.staging.ethco.de`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: dapp-backend-ip-svc
          port: 4551
  # - match: Host(`graf.ethco.de`) && PathPrefix(`/`)
  #   kind: Rule
  #   services:
  #   - name: grafana-cluster-ip-svc
  #     port: 3000
  # - match: Host(`prom.ethco.de`) && PathPrefix(`/`)
  #   kind: Rule
  #   middlewares:
  #     - name: basic-auth
  #   services:
  #   - name: prometheus-cluster-ip-svc
  #     port: 9090

  tls:
    certResolver: default
